--- a/public/pages/settings.html
+++ b/public/pages/settings.html
@@ -193,6 +193,15 @@
           </label>
           <span class="toggle-desc">Permetti agli altri di scaricare la tua skin.</span>
         </div>
+
+        <div class="toggle-row">
+          <span class="toggle-label">Numero Likes Profilo</span>
+          <label class="switch toggle-switch-container">
+            <input type="checkbox" id="setting-privacy-profile-likes">
+            <span class="slider"></span>
+          </label>
+          <span class="toggle-desc">Mostra il numero totale di like sul tuo profilo agli altri utenti.</span>
+        </div>
       </div>
     </div>
   </div>
@@ -208,10 +217,7 @@
               classifica verso la gloria eterna.
             </p>
             <div class="social-links">
-              <a href="#"><i class="fab fa-discord"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-instagram"></i></a>
-              <a href="#"><i class="fab fa-youtube"></i></a>
+              <a href="https://discord.gg/TXwYrtmZ42"><i class="fab fa-discord"></i></a>
             </div>
           </div>
           <div class="footer-section">
@@ -226,7 +232,7 @@
           <div class="footer-section">
             <h3>Supporto</h3>
             <ul class="footer-links">
-              <li><a href="#">Regolamento</a></li>
+              <li><a href="/bwrules">Regolamento</a></li>
               <li><a href="#">FAQ</a></li>
               <li><a href="#">Contattaci</a></li>
             </ul>
