--- a/public/pages/tornei.html
+++ b/public/pages/tornei.html
@@ -91,10 +91,7 @@
               classifica verso la gloria eterna.
             </p>
             <div class="social-links">
-              <a href="#"><i class="fab fa-discord"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-instagram"></i></a>
-              <a href="#"><i class="fab fa-youtube"></i></a>
+              <a href="https://discord.gg/TXwYrtmZ42"><i class="fab fa-discord"></i></a>
             </div>
           </div>
           <div class="footer-section">
@@ -109,7 +106,7 @@
           <div class="footer-section">
             <h3>Supporto</h3>
             <ul class="footer-links">
-              <li><a href="#">Regolamento</a></li>
+              <li><a href="/bwrules">Regolamento</a></li>
 z              <li><a href="#">FAQ</a></li>
               <li><a href="#">Contattaci</a></li>
             </ul>
